--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
