--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
